snapshots/syntax/library/statements/error/error_at_module_level.snap
---
source: src/syntax/library/statements/runtime_state/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "53"
        - kind: Newline
          text: "\n"
