snapshots/syntax/library/statements/error/error_preserves_whitespace.snap
---
source: src/syntax/library/statements/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: "    "
        - kind: IntegerLiteral
          text: "11"
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
